--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@ url:              https://eunji-elly-lee.github.io/
 baseurl:          /
 
 author:
-  name:           'Mark Otto'
-  url:            https://twitter.com/mdo
+  name:           'Eunji Elly Lee'
+  url:            
 
 paginate:         5
 
@@ -23,4 +23,4 @@ paginate:         5
 version:          2.1.0
 
 github:
-  repo:           https://github.com/poole/hyde
+  repo:           https://github.com/Eunji-Elly-Lee/eunji-elly-lee.github.io
