--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Long Haul
 description: Long Form Jekyll theme built with SASS / COMPASS / SUSY
 
-url: https://long-haul.netlify.app
+url: https://eunji-elly-lee.github.io/
 paginate_path: "blog/page:num/"
 permalink: blog/:title/
 
