--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ social:
 #  email: brimaidesigns@gmail.com
   linkedin: eunji-elly-lee
 
-google_analytics: "G-VFHB1MD9EC"
+google_analytics: "G-XS0W79XSYK"
 
 disqus:
   shortname: ellysgitblog
