--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ navigation:
   - title: About
     url: /about
   - title: Java
-    url: /java
+    url: /java_index.html
 #  - title: Contact
 #    url: /contact
 
