--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,8 @@ navigation:
     url: /index.html
   - title: About
     url: /about
+  - title: Search
+    url: /search.html
 #  - title: Contact
 #    url: /contact
 
